name:               SNX
version:            0.1.0
build-Type:         Simple
cabal-version:      >= 1.10
category:           Language
license:            BSD3

executable snx
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base
  ghc-options:      -Wall

library
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Language.Snx
  build-depends:    base
  hs-source-dirs:   src

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Spec.hs
  other-modules:    SnxSpec
  build-depends:    base
                  , hspec >= 1.3
                  , SNX
